# Remember

./: CreateTestCores.py  ExportToDot.py  FullStackTests.py  GdbDriver.py  LICENSE  MemoryRepresentation.py  README.md  TestSuite.py  remember.py
testPrograms/: CMakeLists.txt  arrays.cpp  arrays_result.dot  bigStack.cpp  chainOfPointers.cpp  chainOfPointers_result.dot  cmake_install.cmake  demo_result.dot  heapLoop.cpp  heapLoop_result.dot  infiniteMain.cpp  infiniteMain_variables.cpp  justMain.cpp  justMain_result.dot  mainLocalVariables.cpp  mainLocalVariables_result.dot  mandrakata.cpp  nestedStructs.cpp  pointersInside.cpp  pointersInside_result.dot  recursiveStack.cpp  recursiveStack_result.dot  references.cpp  references_result.dot  simpleStruct.cpp  smallStack.cpp  stackLoop.cpp  stackLoop_result.dot  stackWithPointers.cpp  stackWithPointers_result.dot  temporary.cpp  temporary_result.dot
